# essay-formatter

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
dummy-site/content/: chapter-1.md
essay_formatter/: __init__.py  __main__.py  setup_utf8.py
essay_formatter/sample-data/: chapter-1.md  chapter-2.md  getting-started.md  settings.yaml
essay_formatter/subcommands/build_command/: __init__.py  download_client.py  insert_data.py  insert_static_files.py  load_project_settings.py  make_data_files.py  update_index_html.py  update_site_title.py
essay_formatter/subcommands/fetch_data/: __init__.py
essay_formatter/subcommands/html2json/: __init__.py  h2j.py
essay_formatter/subcommands/html2md/: __init__.py
essay_formatter/subcommands/initiate/: __init__.py
essay_formatter/subcommands/initiate/sample-data/: settings.yaml
essay_formatter/subcommands/md2html/: LabeledFootnotes.py  __init__.py  m2h.py
essay_formatter/subcommands/serve/: __init__.py  flask_server.py
scripts/: docker-test.sh
tests/: test_m2j.py
